welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:31: error: reassignment to val
	j = j + 1;
          ^